# ecommerce-platform

./: README.md
local-retail-platform/: overview.md  setup.sh
local-retail-platform/backend/: config.yaml  db.sqlite3  pyproject.toml
local-retail-platform/backend/assets/: data_model.md
local-retail-platform/backend/core/: settings.py  urls.py
local-retail-platform/backend/src/analytics/: apps.py
local-retail-platform/backend/src/config/: configManager.py
local-retail-platform/backend/src/customers/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
local-retail-platform/backend/src/customers/migrations/: 0001_initial.py  0002_initial.py
local-retail-platform/backend/src/merchants/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
local-retail-platform/backend/src/merchants/management/commands/: setup_test_merchant.py
local-retail-platform/backend/src/merchants/migrations/: 0001_initial.py
local-retail-platform/backend/src/notifications/: apps.py
local-retail-platform/backend/src/orders/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
local-retail-platform/backend/src/orders/migrations/: 0001_initial.py
local-retail-platform/backend/src/payments/: apps.py
local-retail-platform/backend/src/products/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
local-retail-platform/backend/src/products/migrations/: 0001_initial.py
local-retail-platform/backend/src/utils/: models.py
local-retail-platform/frontend/: package-lock.json  package.json
local-retail-platform/frontend/lib/: api.ts  (+1 more)
(+22 files in other folders)
